# terraflex

./: .gitignore  404.html  CNAME  README.md  devbox.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml
docs/: index.md
docs/getting-started/: 01-intro.md  02-installation.md
docs/getting-started/examples/: 1password-storage-provider.md  all-local.md  envvar-storage-provider.md
docs/getting-started/guides/: 01-setting-up-git.md  02-encryption-using-1password.md
docs/getting-started/guides/assets/: git-architecture.excalidraw
docs/gettings-started/encryption-providers/: age.md
docs/gettings-started/storage-providers/: envvar.md  git.md  local.md  onepassword.md
docs/gettings-started/transformers/: encryption.md
docs/reference/commands/: init.md  print-bindings.md  start.md  wrap.md
docs/reference/encryption-providers/: age.md
docs/reference/general/: 01-terraflex_yaml.md  02-storage-providers.md  03-transformers.md  04-entrypoints.md
docs/reference/storage-providers/: envvar.md  git.md  local.md  onepassword.md
docs/reference/transformers/: encryption.md
docs_includes/: badges-all.md  badges-storage-provider-lockable.md  badges-storage-provider-readable.md  badges-storage-provider-writeable.md  readonly-storage-providers.md
examples/: age-encryption-1password.yaml  age-encryption-envvar.yaml  age-encryption-local-all.yaml  terraflex.yaml  tfformer.yaml
getting-started/01-intro/: index.html
getting-started/02-installation/: index.html
getting-started/examples/1password-storage-provider/: index.html
getting-started/examples/all-local/: index.html
getting-started/examples/envvar-storage-provider/: index.html
getting-started/guides/01-setting-up-git/: index.html
getting-started/guides/02-encryption-using-1password/: index.html
reference/commands/init/: index.html
reference/commands/print-bindings/: index.html
reference/commands/start/: index.html
reference/commands/wrap/: index.html
reference/encryption-providers/age/: index.html
reference/general/01-terraflex_yaml/: index.html
reference/general/02-storage-providers/: index.html
reference/general/03-transformers/: index.html
reference/general/04-entrypoints/: index.html
reference/storage-providers/envvar/: index.html
reference/storage-providers/git/: index.html
reference/storage-providers/local/: index.html
reference/storage-providers/onepassword/: index.html
reference/transformers/encryption/: index.html
search/: search_index.json
terraflex/: __main__.py
terraflex/cli/: cli.py
terraflex/cli/builders/: encryption_transformer.py  git_storage.py  local_storage.py  storage_provider.py  wizard.py
terraflex/plugins/encryption_transformation/: encryption_base.py  encryption_transformation_provider.py
terraflex/plugins/encryption_transformation/age/: controller.py  downloader.py  provider.py
terraflex/plugins/envvar_storage_provider/: envvar_storage_provider.py
terraflex/plugins/git_storage_provider/: git_storage_provider.py
terraflex/plugins/local_storage_provider/: local_storage_provider.py
terraflex/plugins/onepassword_storage_provider/: onepassword_storage_provider.py
terraflex/server/: app.py  base_state_lock_provider.py  config.py  storage_provider_base.py  tf_state_lock_controller.py  transformation_base.py
terraflex/utils/: binary_controller.py  dependency_downloader.py  dependency_manager.py  plugins.py
tests/: conftest.py  test_app.py  test_config.py
tests/encrypters/: test_age.py
tfstate_git/: __main__.py
tfstate_git/cli/: cli.py
tfstate_git/plugins/encryption_transformation/: encryption_base.py  encryption_transformation_provider.py
tfstate_git/plugins/encryption_transformation/age/: controller.py  downloader.py  provider.py
tfstate_git/plugins/git_storage_provider/: git_storage_provider.py
tfstate_git/plugins/local_storage_provider/: local_storage_provider.py
tfstate_git/server/: app.py  base_state_lock_provider.py  config.py  encrypted_storage_state_lock_provider.py  repository.py  storage_provider_base.py  tf_state_lock_controller.py  transformation_base.py
tfstate_git/server/adapters/: age_controller.py
tfstate_git/server/adapters/downloaders/: age.py
tfstate_git/server/storage_providers/: base_storage_provider.py  git_storage_provider.py  local_storage_provider.py  storage_provider_protocol.py
tfstate_git/server/transformation_providers/: base_transformation_provider.py  encryption_transformation_provider.py  transformation_protocol.py
tfstate_git/utils/: age_controller.py  binary_controller.py  combine_models.py  dependency_downloader.py  dependency_manager.py  sops_controller.py  sops_installer.py
tfstate_git/utils/downloaders/: age.py  base.py  sops.py
