[tool.poetry]
name = "tfstate-git"
version = "0.1.0"
description = ""
authors = ["Elran Shefer <elran777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.2" }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
xdg-base-dirs = "^6.0.1"
typer = "^0.12.5"
pyyaml = "^6.0.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-playwright = "^0.5.2"

types-pyyaml = "^6.0.12.20240808"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfstate-git = "tfstate_git.cli.cli:main"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
