[tool.poetry]
name = "terraflex"
version = "0.2.2"
description = ""
authors = ["Elran Shefer"]
readme = "README.md"
homepage = "https://github.com/IamShobe/terraflex"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.2" }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
xdg-base-dirs = "^6.0.1"
typer = "^0.12.5"
pyyaml = "^6.0.2"
requests = "^2.32.3"

rich = "^13.8.1"
questionary = "^2.0.1"
semver = "^3.0.2"
[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"

types-pyyaml = "^6.0.12.20240808"
anyio = "^4.4.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length=120

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poetry.scripts]
terraflex = "terraflex.cli.cli:main"

[tool.poetry.plugins."terraflex.plugins.storage_provider"]
git = "terraflex.plugins.git_storage_provider.git_storage_provider:GitStorageProvider"
local = "terraflex.plugins.local_storage_provider.local_storage_provider:LocalStorageProvider"

[tool.poetry.plugins."terraflex.plugins.transformer"]
encryption = "terraflex.plugins.encryption_transformation.encryption_transformation_provider:EncryptionTransformation"

[tool.poetry.plugins."terraflex.plugins.transformer.encryption"]
age = "terraflex.plugins.encryption_transformation.age.provider:AgeEncryptionProvider"

[tool.poetry.plugins."terraflex.plugins.dependencies"]
age = "terraflex.plugins.encryption_transformation.age.provider:AgeDependency"
